--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "version": "0.0.1",
   "author": "Davis Riedel",
   "devDependencies": {
-    "typescript": "latest",
-    "@types/node": "latest",
-    "@types/bun": "latest",
-    "obsidian": "latest",
-    "builtin-modules": "4.0.0",
-    "resolve-tspaths": "^0.8.22",
-    "wasm-pack": "^0.13.0",
-		"@biomejs/biome": "latest"
+    "@biomejs/biome": "2.3.10",
+    "@types/bun": "^1.3.5",
+    "@types/node": "^25.0.3",
+    "builtin-modules": "5.0.0",
+    "lefthook": "^2.0.13",
+    "obsidian": "^1.11.0",
+    "resolve-tspaths": "^0.8.23",
+    "typescript": "^5.9.3",
+    "ultracite": "7.0.5",
+    "wasm-pack": "^0.13.1",
+    "@typescript/native-preview": "^7.0.0-dev.20260103.1"
+  },
+  "scripts": {
+    "prepare": "lefthook install"
   }
 }
